# Connect-Four-Game

./: .env.dev  .gitignore  LICENSE  auth.config.ts  auth.ts  docker-compose.dev.yml  docker-compose.yml  next-auth.d.ts  package-lock.json  package.json  pyproject.toml  routes.ts  tailwind.config.ts  tsconfig.json
backend/: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile-Celery  pyproject.toml
backend/ai/: board.py  serializers.py  urls.py  utils.py  views.py
backend/ai/algorithm/: algorithm.py  alphabeta.py  minimax.py  minmax.py
backend/ai/fixtures/: sample_data.json
backend/ai/tests/: test_algorithm_api.py
backend/algorithm/: apps.py  urls.py  views.py
backend/algorithm/fixtures/: sample_data.json
backend/algorithm/tests/: test_algorithm_api.py
backend/app/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: admin.py  authentications.py  constants.py  consumers.py  dataclasses.py  middleware.py  middlewares.py  models.py  permissions.py  redis.py  router.py  serializers.py  urls.py  utils.py  views.py
backend/core/migrations/: 0001_initial.py  0002_guest.py  0002_guest_alter_user_user_id.py  0003_algorithm.py  0004_player.py  0005_status.py  0006_remove_guest_session_id.py  0008_game.py  0018_move.py  (+19 more)
backend/game/: apps.py  consumers.py  elo.py  match_making.py  mixins.py  move.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/scripts/: celery.sh  entrypoint.sh
backend/user/: consumers.py  mixins.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  views.py
(+146 files in other folders)
