[tool.poetry]
name = "connect-four"
version = "0.1.0"
description = "A four in a row game between players and or a computer"
authors = ["feaad <antwi-donkor_f@outlook.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
